# Graph-Inverse-Reinforcement-Learning-for-MEV-Detection-on-Ethereum

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
graph_reinforcement_learning_using_blockchain_data/: __init__.py  config.py  dataset.py  features.py  graphs.py  plots.py  raw_ethereum_data.py  utils.py
models/: reward_net0  reward_net1  stats1.pkl
notebooks/: 0.01-flashbots.ipynb  0.01-lte-flashbots.ipynb  0.02-graphs-arbitrages_with_logs.ipynb  0.02-lte-arbitrages_with_logs.ipynb  0.02-lte-graphs-arbitrages_with_logs.ipynb  0.03-arbinet.ipynb  0.03-lte-signatures-arbitrages_with_logs.ipynb  1.00-fix.ipynb  1.01-features-receipts.ipynb  1.01-lte-features-logs.ipynb  1.02-correlation-graph-features.ipynb  1.03-trx-graphs-receipts.ipynb  1.04-rl.ipynb  1.05-trx-graphs-per-acc-receipts.ipynb  1.06-airl-data.ipynb  2.01-lte-signatures-arbitrages_with_logs.ipynb  2.01-signatures-arbitrages_with_logs.ipynb  2.03-mcnemar-test-rf-models.ipynb  2.04-pca-dgi-embeddings.ipynb  3.01-lte-random-forest-logs.ipynb  3.01-random-forest-features-edges.ipynb  3.02-lte-pca-logs.ipynb  3.02-random-forest-features-nodes.ipynb  3.03-random-forest-graph-edges.ipynb  3.04-random-forest-graph-by-block-edges.ipynb  3.05-gnn-trx-graphs.ipynb  3.06-random-forest-features-edges-with-embeddings.ipynb  3.07-random-forest-features-edges-multi-occ.ipynb  3.08-rl.ipynb  3.08-rl.py  3.09-gnn-state-graphs.ipynb  3.10-irl.ipynb  3.11-irl-env-v2.ipynb  3.12-gnn-with-dgi.ipynb  3.13-irl-env-v2-with-dgi-embeddings.ipynb  3.14-irl-dgi-128.ipynb  (+2 more)
(+3134 files in other folders)
