[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "graph_reinforcement_learning_using_blockchain_data"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Liam Tessendorf" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.(pyi?|ipynb)$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["graph_reinforcement_learning_using_blockchain_data"]
force_sort_within_sections = true
